--- a/axelor-foods/src/main/resources/views/OmInvoice.xml
+++ b/axelor-foods/src/main/resources/views/OmInvoice.xml
@@ -4,25 +4,77 @@
 	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.3.xsd">
     
     <grid name="om-invoice-grid" title="Invoices" model="com.axelor.apps.om.db.OmInvoice">
-	    <field name="invoiceNumber" title="Container"/>
+	    <field name="invoiceNumber" title="Invoice Number"/>
 	    <field name="customer" />
 	    <field name="invoiceAmount" />
 	    <field name="invoiceDate"/>
 	    <field name="currency" />
     </grid>
 
-	<form name="om-invoice-form" title="Invoice" model="com.axelor.apps.om.db.OmInvoice">
+	<form name="om-invoice-form" title="Invoice" model="com.axelor.apps.om.db.OmInvoice" onNew="action-attrs-om-invoice-set-current-date">
 		
 		<panel name="firstPanel">
-		    <field name="invoiceNumber" title="Container"/>
-		    <field name="customer" />
-		    <field name="invoiceAmount" />
-		    <field name="invoiceDate"/>
+		    <field name="invoiceNumber" title="Invoice Number"/>
 		    <field name="currency" />
-		    <field name="deliveryAddress" widget="html"/>
 		    
-		    <field name="description" widget="html"/>
+		    <field name="customer" readonlyIf="products != null" onChange="action-attrs-om-invoice-set-delivery-address,save" />
+		    <field name="deliveryAddress" />
+		    
+		    <spacer/>
+		    <spacer/>
+		    <panel-related field="products" readonlyIf="confirm" canRemove="false"  onChange="action-method-om-invoice-set-total-amount,save" colSpan="12" showIf="customer != null" form-view="om-invoice-line-form" grid-view="om-invoice-line-grid"/>
+		    
+		    <spacer/>
+		    <spacer/>
+		    <field name="description" colSpan="12" widget="html"/>
+		</panel>
+		
+		<panel sidebar="true">
+			<field name="invoiceDate" />
+			<field name="invoiceAmount" css="label-bold bold large" readonly="true"/>
+			<spacer/>
+			<field name="confirm" title="Confirm" hidden="true"/>
+			<button css="btn-success" onClick="action-method-om-invoice-set-available-product-qty,action-attrs-om-invoice-set-confirm,save" readonlyIf="confirm" name="removeProduct" title="Confirm Order" />
+			<button css="btn-primary" onClick="action-method-om-invoice-remove-selected-product,action-method-om-invoice-set-total-amount,save" readonlyIf="!confirm" name="removeProduct" title="Remove Selected Product" />
+			<button css="btn-danger" onClick="action-method-om-invoice-reset-all-product,action-method-om-invoice-set-total-amount,action-attrs-om-invoice-remove-confirm,save" readonlyIf="!confirm" name="removeProduct" title="Remove All Product" />
+			
 		</panel>
 		
 	</form>
+	
+	<action-attrs name="action-attrs-om-invoice-set-delivery-address">
+			<attribute name="value" for="deliveryAddress" expr="eval: customer?.customerAddress?.fullAddess"/>
+	</action-attrs>
+	
+	<action-attrs name="action-attrs-om-invoice-set-confirm">
+		<attribute name="value" for="confirm" expr="eval: true"/>
+	</action-attrs>
+	
+	<action-attrs name="action-attrs-om-invoice-remove-confirm">
+		<attribute name="value" for="confirm" expr="eval: false"/>
+	</action-attrs>
+	
+	<action-attrs name="action-attrs-om-invoice-set-current-date">
+			<attribute name="value" for="invoiceDate" expr="eval: __date__"/>
+			<attribute name="value" for="currency" expr="eval: 'EURO'"/>
+	</action-attrs>
+
+	<action-method name="action-method-om-invoice-set-total-amount">
+		<call class="com.axelor.apps.omfoods.web.OmInvoiceController" method="calculateTotal"/>
+	</action-method>	
+	
+	<action-method name="action-method-om-invoice-remove-selected-product">
+		<call class="com.axelor.apps.omfoods.web.OmInvoiceController" method="removeProduct"/>	
+	</action-method>
+	
+	<action-method name="action-method-om-invoice-set-available-product-qty">
+		<call class="com.axelor.apps.omfoods.web.OmInvoiceController" method="lessProductQty"/>
+	</action-method>
+	
+	<action-method name="action-method-om-invoice-reset-all-product">
+		<call class="com.axelor.apps.omfoods.web.OmInvoiceController" method="resetProduct"/>
+	</action-method>
+	
+	
+	
 	</object-views>
