--- a/axelor-foods/src/main/resources/views/OmProduct.xml
+++ b/axelor-foods/src/main/resources/views/OmProduct.xml
@@ -28,19 +28,19 @@
 		<panel name="secondPanel"> 
 		 <spacer/>
 		 <spacer/>
-			<field name="unit" colSpan="3" />
-			<field name="unitPiece" colSpan="3" onChange="action-omproduct-attrs-set-product-all-stock-prise"/>
-			<field name="unitstock" colSpan="3" onChange="action-omproduct-attrs-set-total-piece"/>
-			<field name="extraSinglePiece" colSpan="3" onChange="action-omproduct-attrs-set-total-piece"/>
+			<field name="unit" colSpan="3" title="Cartoon"/>
+			<field name="unitPiece" colSpan="3" title="Cartoon Piece" onChange="action-omproduct-attrs-set-product-all-stock-prise"/>
+			<field name="unitstock" colSpan="3" title="Total Cartoon" onChange="action-omproduct-attrs-set-total-piece"/>
+			<field name="extraSinglePiece" colSpan="3" onChange=""/>
 		</panel>
 		
 		<panel>
 			<spacer/>
 		 	<spacer/>
 			<field name="piecePurchasePrice" colSpan="4" onChange="action-omproduct-attrs-set-unit-purchase-prise"/>
-			<field name="unitPurchasePrice" colSpan="6" readonly="true"/>
+			<field name="unitPurchasePrice" colSpan="6" title="Cartoon Purchase Prise" readonly="true"/>
 			<field name="pieceSalePrice" colSpan="4" onChange="action-omproduct-attrs-set-unit-sale-prise"/>
-			<field name="unitSalePrice" colSpan="6" readonly="true"/>
+			<field name="unitSalePrice" colSpan="6" title="Cartoon Sale Prise" readonly="true"/>
 		</panel>
 		
 		<panel-tabs>
@@ -60,7 +60,7 @@
 	<action-attrs name="action-omproduct-attrs-set-product-all-stock-prise">
 		<attribute name="value" for="unitSalePrice" expr="eval: pieceSalePrice * unitPiece"/>
 		<attribute name="value" for="unitPurchasePrice" expr="eval: piecePurchasePrice * unitPiece"/>
-		<attribute name="value" for="totalPiece" expr="eval: (unitstock * unitPiece) + extraSinglePiece"/>
+		<attribute name="value" for="totalPiece" expr="eval: (unitstock * unitPiece)"/>
 	</action-attrs>
 	
 	<action-attrs name="action-omproduct-attrs-set-total-piece">
