update invoice line

--- a/axelor-foods/src/main/resources/views/OmInvoiceLine.xml
+++ b/axelor-foods/src/main/resources/views/OmInvoiceLine.xml
@@ -5,20 +5,43 @@
     
     <grid name="om-invoice-line-grid" title="Invoice Lines" model="com.axelor.apps.om.db.OmInvoiceLine">
 	    <field name="product" />
-	    <field name="unit" />
+	    <field name="productCode" />
+	    <field name="totalPiece" />
+	    <field name="piecePrise" />
+	    <field name="totalCartoon" />
+		<field name="totalCost" />
+	  
+	    <field name="unit" hidden="true"/>
+	    
+	    <!-- 
 	    <field name="unitQty" />
 	    <field name="totalUniteCost"/>
 	    <field name="singleQty" />
 	    <field name="totalSingleCost" />
-	    <field name="totalCost" />
+	     -->
     </grid>
 
-	<form name="om-invoice-line-form"  title="Select Invoice Product" model="com.axelor.apps.om.db.OmInvoiceLine" onNew="action-attrs-om-invoice-line-set-parent-invoice-for-relation" onSave="action-method-om-invoice-line-check-confirm">
+	<form name="om-invoice-line-form"  title="Select Invoice Product" model="com.axelor.apps.om.db.OmInvoiceLine" onNew="action-attrs-om-invoice-line-set-parent-invoice-for-relation">
 		
 		<panel name="firstPanel">
 		    <field name="product" title="Product" readonlyIf="confirm" required="true" canEdit="true" onChange="action-attrs-om-invoice-line-set-unit,action-method-om-invoice-line-avalilable-qty"/>
-		    <field name="unit" />
-		    
+		 	<field name="productCode" colSpan="3" readonly="true" />
+		 	<field name="cartoonPiece" colSpan="3" readonly="true" min="0"/>
+		 	<spacer colSpan="12" />
+		 	<field name="piecePrise" min="0" onChange="action-attrs-om-invoice-line-set-product-cost"/>
+		 	<spacer />
+		 	<field name="totalPiece" min="0" onChange="action-methods-om-invoice-line-check-product-qty,action-attrs-om-invoice-line-set-product-cost" />
+		 	<spacer/>
+		 	<field name="totalCartoon" readonly="true" min="0"/>
+		 	<spacer colSpan="12"/>
+		 	<field name="totalCost" css="label-bold bold large" min="0" readonly="true"/>
+		 
+		 	
+		 	<spacer colSpan="12" />
+		 	
+		    <field name="unit" hidden="true"/>
+		    <field name="status" css="label-bold bold" readonly="true" colSpan="12"/>
+		   <!-- 
 		    <field name="unitPrice" colSpan="4" readonlyIf="confirm" onChange="action-attrs-om-invoice-line-set-product-cost"/>
 		    <field name="unitQty" colSpan="4" readonlyIf="confirm" onChange="action-methods-om-invoice-line-check-product-qty,action-attrs-om-invoice-line-set-product-cost" />
 		    <field name="totalUniteCost"  colSpan="4" readonly="true"/>
@@ -28,10 +51,11 @@
 		    <field name="totalSingleCost" colSpan="4" readonly="true"/>
 		    
 		    <field name="totalCost" css="label-bold bold large" readonly="true" colSpan="12"/>
-		    <field name="status" css="label-bold bold" readonly="true" colSpan="12"/>
+		    
 		    <button hidden="true" onClick="action-attrs-on-invoice-line-set-confirm,action-method-om-invoice-line-less-qty,save" css="btn-success" readonlyIf="confirm" name="confirmProduct" title="Confirm Product" />
 		    <field name="confirm" hidden="true"/>
 		    <field name="invoice" hidden="true"/>
+		     -->
 		</panel>
 		
 		
@@ -40,20 +64,20 @@
 	
 	<action-attrs name="action-attrs-om-invoice-line-set-unit" >
 		<attribute name="value" for="unit" expr="eval: product?.unit"/>
-		<attribute name="value" for="unitPrice" if="product != null" expr="eval:__repo__(CustomerPrise).all().filter('self.omProduct = ? AND self.customer = ?',product,__parent__.customer).fetchOne()?.unitPrise"/>
-		<attribute name="value" for="singleiecePrice" if="product != null" expr="eval:__repo__(CustomerPrise).all().filter('self.omProduct = ? AND self.customer = ?',product,__parent__.customer).fetchOne()?.singlePiecePrise"/>
-		<attribute name="value" for="unitQty" expr="eval: 0.00"/>
-		<attribute name="value" for="totalUniteCost" expr="eval: 0.00"/>
-		<attribute name="value" for="singleQty" expr="eval: 0.00"/>
-		<attribute name="value" for="totalSingleCost" expr="eval: 0.00"/>
+		<attribute name="value" for="totalCartoon" expr="eval: 0.00"/>
+		<attribute name="value" for="totalPiece" expr="eval: 0.00"/>
 		<attribute name="value" for="totalCost" expr="eval: 0.00"/>
+		
+		
+		<attribute name="value" for="productCode" expr="eval: product?.code"/>
+		<attribute name="value" for="cartoonPiece" expr="eval: product?.unitPiece"/>
+		<attribute name="value" for="piecePrise" if="product != null" expr="eval:__repo__(CustomerPrise).all().filter('self.omProduct = ? AND self.customer = ?',product,__parent__.customer).fetchOne()?.singlePiecePrise"/>
 	</action-attrs>
 	
 	
 	<action-attrs name="action-attrs-om-invoice-line-set-product-cost">
-		<attribute name="value" for="totalUniteCost" expr="eval: unitPrice * unitQty"/>
-		<attribute name="value" for="totalSingleCost" expr="eval: singleiecePrice * singleQty"/>
-		<attribute name="value" for="totalCost" expr="eval: (unitPrice * unitQty) + (singleiecePrice * singleQty)"/>
+		<attribute name="value" for="totalCartoon" expr="eval: totalPiece / cartoonPiece"/>
+		<attribute name="value" for="totalCost" expr="eval: piecePrise * totalPiece"/>
 	</action-attrs>
 	
 	<action-attrs name="action-attrs-on-invoice-line-set-confirm">
@@ -74,10 +98,6 @@
 	
 	<action-method name="action-method-om-invoice-line-less-qty"> 	
 		<call class="com.axelor.apps.omfoods.web.OmInvoiceLineController" method="lessProductQty"/>
-	</action-method>
-	
-	<action-method name="action-method-om-invoice-line-check-confirm">
-		<call class="com.axelor.apps.omfoods.web.OmInvoiceLineController" method="checkConfirm"/>
 	</action-method>
 	
 	</object-views>
