--- a/axelor-foods/src/main/resources/views/OmProduct.xml
+++ b/axelor-foods/src/main/resources/views/OmProduct.xml
@@ -64,7 +64,7 @@
 	</action-attrs>
 	
 	<action-attrs name="action-omproduct-attrs-set-total-piece">
-		<attribute name="value" for="totalPiece" expr="eval: (unitstock * unitPiece) + extraSinglePiece"/>
+		<attribute name="value" for="totalPiece" expr="eval: (unitstock * unitPiece)"/>
 	</action-attrs>	
 	
 	
