--- a/axelor-foods/src/main/resources/views/OmInvoice.xml
+++ b/axelor-foods/src/main/resources/views/OmInvoice.xml
@@ -36,7 +36,9 @@
 		
 		<panel sidebar="true">
 			<field name="invoiceDate" />
-			<field name="invoiceAmount" css="label-bold bold large" readonly="true"/>
+			<field name="invoiceAmount" css="label-bold bold large" readonly="true" colSpan="6" />
+			<field name="invoiceTax"  css="label-bold bold large" readonly="true" colSpan="6" />
+			<field name="grossAmount" css="label-bold bold large" readonly="true" />
 			<spacer/>
 			<field name="confirm" title="Confirm" hidden="true"/>
 			<button css="btn-success" onClick="action-method-om-invoice-set-available-product-qty,action-attrs-om-invoice-set-confirm,save" readonlyIf="confirm" name="removeProduct" title="Confirm Order" />
