--- a/axelor-foods/src/main/resources/views/Container.xml
+++ b/axelor-foods/src/main/resources/views/Container.xml
@@ -20,7 +20,7 @@
 		    <field name="arriveDate" />
 		</panel>
 		
-		<panel-related field="products"  
+		<panel-related field="products"   readonlyIf="confirm"
 		canEdit="true" 
 		form-view="om-container-product-line-form" 
 		grid-view="om-container-product-line-grid"
@@ -30,16 +30,37 @@
 			<field name="confirm" title="Confirm" hidden="true"/>
 			<spacer/>
 			<field name="confirm" title="Confirm" hidden="true"/>
-			<button css="btn-success" onClick="action-method-om-invoice-set-available-product-qty,action-attrs-om-invoice-set-confirm,save" readonlyIf="confirm" name="confirmContainer" title="Confirm Container" />
-			<button css="btn-primary" onClick="action-method-om-invoice-remove-selected-product,action-method-om-invoice-set-total-amount,save" readonlyIf="!confirm" name="removeProduct" title="Remove Selected Product" />
-			<button css="btn-danger" onClick="action-method-om-invoice-reset-all-product,action-method-om-invoice-set-total-amount,action-attrs-om-invoice-remove-confirm,save" readonlyIf="!confirm" name="removeProduct" title="Remove All Product" />
+			<button css="btn-success" onClick="action-container-method-add-product-qty-in-product-stock,action-container-attrs-set-confirm,save" readonlyIf="confirm" name="confirmContainer" title="Confirm Container" />
+			<button css="btn-primary" onClick="action-method-om-container-remove-selected-product,action-container-method-set-totalcost-container,save" readonlyIf="!confirm" name="removeProduct" title="Remove Selected Product" />
+			<button css="btn-danger" onClick="action-method-om-container-reset-all-product,action-container-method-set-totalcost-container,action-attrs-om-conainer-remove-confirm,save" readonlyIf="!confirm" name="removeProduct" title="Remove All Product" />
 			
 		</panel>
 		
 	</form>
 	
+	<action-attrs name="action-container-attrs-set-confirm">
+		<attribute name="value" for="confirm" expr="eval: true"/>
+	</action-attrs>
+	
+	<action-attrs name="action-attrs-om-conainer-remove-confirm">
+		<attribute name="value" for="confirm" expr="eval: false"/>
+	</action-attrs>
+	
 	<action-method name="action-container-method-set-totalcost-container">
 		<call class="com.axelor.apps.omfoods.web.ContainerController" method="calculateTotalCost"/>
+	</action-method>
+	
+	
+	<action-method name="action-container-method-add-product-qty-in-product-stock">
+		<call class="com.axelor.apps.omfoods.web.ContainerController" method="addProductQty"/>
+	</action-method>
+	
+	<action-method name="action-method-om-container-remove-selected-product">
+		<call class="com.axelor.apps.omfoods.web.ContainerController" method="removeSelectedProduct"/>
+	</action-method>
+	
+	<action-method name="action-method-om-container-reset-all-product">
+		<call class="com.axelor.apps.omfoods.web.ContainerController" method="resetProduct"/>
 	</action-method>
 	
 	</object-views>
